test/pos/unused.msmt_
; Sorts
(declare-sort Tree 0)

; Constants




; Uninterpreted Functions
(declare-fun len (Tree) Int)

; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##1 Tree)) (=> (< 666 (len _VV##1)) (< 66 (len _VV##1)))))

