test/neg/float-literal.msmt_
; Sorts
(declare-sort Obj_a_aZU 0)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##2 Obj_a_aZU)) (=> True (>= _VV##2 1.0))))

